--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,29 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import '~antd/dist/antd.css';
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+/*html,*/
+/*body {*/
+  /*padding: 0;*/
+  /*margin: 0;*/
+  /*font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,*/
+    /*Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;*/
+/*}*/
 
-* {
-  box-sizing: border-box;
+/*a {*/
+  /*color: inherit;*/
+  /*text-decoration: none;*/
+/*}*/
+
+/** {*/
+  /*box-sizing: border-box;*/
+/*}*/
+
+#components-layout-demo-fixed .logo {
+    width: 120px;
+    height: 31px;
+    background: rgba(255, 255, 255, 0.2);
+    margin: 16px 24px 16px 0;
+    float: left;
+}
+.site-layout .site-layout-background {
+    background: #fff;
 }
