--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,13 +20,18 @@
   /*box-sizing: border-box;*/
 /*}*/
 
-#components-layout-demo-fixed .logo {
+.logo {
     width: 120px;
     height: 31px;
     background: rgba(255, 255, 255, 0.2);
     margin: 16px 24px 16px 0;
     float: left;
 }
+
+header.ant-layout-header {
+    background-color: white;
+}
+
 .site-layout .site-layout-background {
     background: #fff;
 }
